fix search on mobile devices

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -53,6 +53,13 @@
   letter-spacing: 0.1em;
 }
 
+@media (max-width: 768px) {
+  .gridWrapper h3 {
+    font-size: 15px;
+    letter-spacing: 0.05em;
+  }
+}
+
 .grid {
   width: 100%;
   display: grid;
